--- a/src/style/sass/header/_header.scss
+++ b/src/style/sass/header/_header.scss
@@ -14,13 +14,23 @@
     font-weight: 400;
     margin-left: 25px;
     font-style: italic;
+    @media (min-width: $sm) {
+      display: none;
+    }
+    @media (min-width: $md) {
+      display: block;
+    }
   }
 
   .nav {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
     @media (min-width: $md) {
-      flex-direction: row;
+      margin: 0;
+      justify-content: flex-end;
     }
     .tab {
       margin-right: 25px;
@@ -32,6 +42,12 @@
     }
     .active {
       border-bottom: 1px solid #fefcfd;
+    }
+    .last {
+      margin-right: 0;
+      @media (min-width: $md) {
+        margin-right: 25px;
+      }
     }
   }
 }
