--- a/src/style/sass/body/_body.scss
+++ b/src/style/sass/body/_body.scss
@@ -1,5 +1,8 @@
 .body {
   .body-content {
-    height: 800px;
+    height: 700px;
+    margin: 0;
   }
+  display: flex;
+  flex-direction: column;
 }
