--- a/src/style/sass/index.scss
+++ b/src/style/sass/index.scss
@@ -3,3 +3,6 @@
 @import "./variables";
 @import "./header/header";
 @import "./body/body";
+@import "./body/home";
+@import "./body/about";
+@import "./components/singleProjects";
