--- a/src/style/sass/header/_header.scss
+++ b/src/style/sass/header/_header.scss
@@ -1,13 +1,14 @@
 .header {
-  height: 80px;
-  min-width: $sm;
   width: 100%;
   background-color: #000505;
+  margin: auto;
+  z-index: 9999;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: #fefcfd;
   position: sticky;
+  height: 80px;
   top: 0;
 
   .name {
