--- a/src/style/sass/body/_about.scss
+++ b/src/style/sass/body/_about.scss
@@ -2,6 +2,8 @@
   background: rgb(125, 32, 165);
   height: 100%;
   padding-bottom: 25px;
+  margin: auto;
+ 
   .about-me {
     background: #ffffff;
     width: calc(100% -40px);
@@ -9,6 +11,10 @@
     padding: 20px 20px;
     text-align: center;
     border-radius: 10px;
+    @media (min-width: $md) {
+      width: 60%;
+      margin: 0 auto;
+    }
     .about-text {
       margin-bottom: 15px;
       line-height: 1.2rem;
