--- a/src/style/sass/components/_singleProjects.scss
+++ b/src/style/sass/components/_singleProjects.scss
@@ -1,23 +1,55 @@
 .single-project {
-  height: 250px;
   text-align: center;
-  border: solid 2px red;
-  margin: 20px 0;
-}
 
-.hidden {
-  opacity: 0;
-}
-
-.red {
-  border: solid 2px blue;
-}
-
-@keyframes wipe-enter {
-  0% {
-    transform: scale(0, 0.025);
-  }
-  50% {
-    transform: scale(1, 0.025);
+border-bottom: 1px black solid;
+  .project-content {
+    margin-bottom: 15px;
   }
 }
+
+
+
+
+.project-img {
+  padding: 15px ;
+}
+
+.temp-img {
+  width: 100%;
+  height: 300px;
+  background-color: rgb(180, 209, 180);
+
+}
+
+.project-title {
+  line-height: 1.3rem;
+  font-size: 1.5rem;
+
+}
+
+.animation {
+
+  animation: fade-enter 1s linear;
+  
+}
+
+@keyframes fade-enter {
+  0% {transform: translateY(100px); opacity: 0;}
+  50% {opacity: 0.25;}
+  100% {transform: translateY(0);
+    opacity: 1;}
+  }
+
+@-moz-keyframes fade-enter {
+  0% {transform: translateY(100px); opacity: 0;}
+  50% {opacity: 0.25;}
+ 100% {transform: translateY(0);
+  opacity: 1;}
+}
+@-webkit-keyframes fade-enter {
+  0% {transform: translateY(100px); opacity: 0;}
+  50% {opacity: 0.25;}
+ 100% {transform: translateY(0);
+  opacity: 1;}
+}
+
