--- a/src/style/sass/index.css
+++ b/src/style/sass/index.css
@@ -314,6 +314,7 @@
   background: #7d20a5;
   height: 100%;
   padding-bottom: 25px;
+  margin: auto;
 }
 
 .about .about-me {
@@ -325,45 +326,80 @@
   border-radius: 10px;
 }
 
+@media (min-width: 481px) {
+  .about .about-me {
+    width: 60%;
+    margin: 0 auto;
+  }
+}
+
 .about .about-me .about-text {
   margin-bottom: 15px;
   line-height: 1.2rem;
 }
 
+.projects {
+  background-color: #7d20a5;
+}
+
 .single-project {
-  height: 250px;
   text-align: center;
-  border: solid 2px red;
-  margin: 20px 0;
+  border-bottom: 1px black solid;
 }
 
-.hidden {
-  opacity: 0;
+.single-project .project-content {
+  margin-bottom: 15px;
 }
 
-.red {
-  border: solid 2px blue;
+.project-img {
+  padding: 15px;
 }
 
-@-webkit-keyframes wipe-enter {
+.temp-img {
+  width: 100%;
+  height: 300px;
+  background-color: #b4d1b4;
+}
+
+.project-title {
+  line-height: 1.3rem;
+  font-size: 1.5rem;
+}
+
+.animation {
+  -webkit-animation: fade-enter 1s linear;
+          animation: fade-enter 1s linear;
+}
+
+@keyframes fade-enter {
   0% {
-    -webkit-transform: scale(0, 0.025);
-            transform: scale(0, 0.025);
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
+    opacity: 0;
   }
   50% {
-    -webkit-transform: scale(1, 0.025);
-            transform: scale(1, 0.025);
+    opacity: 0.25;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
   }
 }
 
-@keyframes wipe-enter {
+@-webkit-keyframes fade-enter {
   0% {
-    -webkit-transform: scale(0, 0.025);
-            transform: scale(0, 0.025);
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
+    opacity: 0;
   }
   50% {
-    -webkit-transform: scale(1, 0.025);
-            transform: scale(1, 0.025);
+    opacity: 0.25;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=index.css.map */
