--- a/src/style/sass/index.scss
+++ b/src/style/sass/index.scss
@@ -5,4 +5,5 @@
 @import "./body/body";
 @import "./body/home";
 @import "./body/about";
+@import "./body/projects";
 @import "./components/singleProjects";
