--- a/src/style/sass/body/_body.scss
+++ b/src/style/sass/body/_body.scss
@@ -1,3 +1,5 @@
+
+
 .body {
   .body-content {
     height: 700px;
@@ -5,4 +7,22 @@
   }
   display: flex;
   flex-direction: column;
+
 }
+
+// .backdrop {
+//   background: linear-gradient(
+//     180deg,
+//     rgb(255, 255, 255) 0%,
+//     rgba(139, 48, 178, 1) 80%,
+//     rgba(125, 32, 165, 1) 100%
+//   );
+ 
+//   height:100vh;
+//   width: 100%;
+//   position: fixed;
+//   top: 0;
+//   left:0;
+//   z-index: -1;
+
+// }
