--- a/src/style/sass/body/_home.scss
+++ b/src/style/sass/body/_home.scss
@@ -3,12 +3,14 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background: rgb(0, 0, 0);
+  
   background: linear-gradient(
     180deg,
     rgb(255, 255, 255) 0%,
-    rgba(139, 48, 178, 1) 80%,
-    rgba(125, 32, 165, 1) 100%
+    // rgb(144, 66, 177) 80%,
+    // rgb(129, 44, 165) 100%
+    rgb(185, 184, 185) 80%,
+    rgb(139, 135, 139) 100%
   );
 
   .name-mobile {
@@ -46,7 +48,7 @@
   }
   .home-icons {
     width: 50px;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
   }
   .lightning-bolt {
     opacity: 0;
