--- a/src/style/sass/index.scss
+++ b/src/style/sass/index.scss
@@ -6,4 +6,7 @@
 @import "./body/home";
 @import "./body/about";
 @import "./body/projects";
+@import "./body/skills";
 @import "./components/singleProjects";
+@import "./components/br";
+@import "./animations";
