--- a/src/style/sass/_default.scss
+++ b/src/style/sass/_default.scss
@@ -1,6 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Helvetica Neue", sans-serif;
+  // font-family: "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
   // font-family: "Barlow", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
