--- a/src/style/sass/body/_about.scss
+++ b/src/style/sass/body/_about.scss
@@ -1,14 +1,24 @@
 .about {
   // background:  rgb(129, 44, 165);
-  background:     rgb(139, 135, 139)   ;
+
+  // background: linear-gradient(
+  //   180deg,
+  //   rgb(185, 184, 185) 0%,
+  //   rgb(202, 170, 202) 70%,
+
+  //   rgb(144, 66, 177) 100%,
+  //   // rgb(129, 44, 165) 100%
+  //   // rgb(212, 209, 212) 80%,
+  //   // rgb(185, 184, 185) 100%
+  // );
   height: 100%;
   padding-bottom: 25px;
   margin: auto;
- 
+
   .about-me {
     // background: #ffffff;
-    width: calc(100% - 40px);
-    margin: 0 20px;
+    width: 80%;
+    margin: auto;
     // padding: 20px 20px;
     text-align: center;
     border-radius: 10px;
@@ -19,7 +29,7 @@
     .about-text {
       margin-bottom: 15px;
       line-height: 1.4rem;
-      font-size:1.2rem;
+      font-size: 1.2rem;
     }
   }
 }
