--- a/src/style/sass/body/_body.scss
+++ b/src/style/sass/body/_body.scss
@@ -1,28 +1,42 @@
-
-
 .body {
+  position: absolute;
+
+  // background: linear-gradient(
+  //   180deg,
+  //   rgb(185, 184, 185) 0%,
+  //   rgb(202, 170, 202) 70%,
+
+  //   rgb(144, 66, 177) 100%
+  // );
+  .block {
+    height: 80px;
+    position: sticky;
+    top: 0;
+  }
   .body-content {
     height: 700px;
     margin: 0;
   }
   display: flex;
   flex-direction: column;
-
+  .content-container {
+    z-index: 1;
+  }
 }
 
-// .backdrop {
-//   background: linear-gradient(
-//     180deg,
-//     rgb(255, 255, 255) 0%,
-//     rgba(139, 48, 178, 1) 80%,
-//     rgba(125, 32, 165, 1) 100%
-//   );
- 
-//   height:100vh;
-//   width: 100%;
-//   position: fixed;
-//   top: 0;
-//   left:0;
-//   z-index: -1;
+.backdrop {
+  background: linear-gradient(
+    180deg,
+    rgb(185, 184, 185) 0%,
+    rgb(202, 170, 202) 70%,
 
-// }
+    rgb(144, 66, 177) 100%
+  );
+
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
