--- a/src/style/sass/body/_home.scss
+++ b/src/style/sass/body/_home.scss
@@ -3,15 +3,16 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  
-  background: linear-gradient(
-    180deg,
-    rgb(255, 255, 255) 0%,
-    // rgb(144, 66, 177) 80%,
-    // rgb(129, 44, 165) 100%
-    rgb(185, 184, 185) 80%,
-    rgb(139, 135, 139) 100%
-  );
+
+  // background: linear-gradient(
+  //   180deg,
+  //   rgb(255, 255, 255) 0%,
+  //   // rgb(144, 66, 177) 80%,
+  //   // rgb(129, 44, 165) 100%
+  //   rgb(212, 209, 212) 80%,
+  //   rgb(185, 184, 185) 100%
+  // );
+  padding-bottom: 35px;
 
   .name-mobile {
     margin-top: 25px;
@@ -41,6 +42,7 @@
     font-size: 1.2rem;
     .info-parag {
       margin-top: 25px;
+      height: 80px;
       .info-text {
         margin-bottom: 15px;
       }
