--- a/src/style/sass/index.css
+++ b/src/style/sass/index.css
@@ -1,8 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;1,400;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&display=swap");
 * {
   margin: 0;
   padding: 0;
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
 }
 
 .header {
@@ -20,8 +24,7 @@
       -ms-flex-align: center;
           align-items: center;
   color: #fefcfd;
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   height: 80px;
   top: 0;
 }
@@ -75,12 +78,13 @@
   padding-bottom: 5px;
   background-color: #000505;
   color: #fefcfd;
+  color: #d4d1d4;
   border: none;
   cursor: pointer;
 }
 
 .header .nav .active {
-  border-bottom: 1px solid #fefcfd;
+  border-bottom: 1px solid #d4d1d4;
 }
 
 .header .nav .last {
@@ -94,6 +98,7 @@
 }
 
 .body {
+  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -103,9 +108,31 @@
           flex-direction: column;
 }
 
+.body .block {
+  height: 80px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
 .body .body-content {
   height: 700px;
   margin: 0;
+}
+
+.body .content-container {
+  z-index: 1;
+}
+
+.backdrop {
+  background: -webkit-gradient(linear, left top, left bottom, from(#b9b8b9), color-stop(70%, #caaaca), to(#9042b1));
+  background: linear-gradient(180deg, #b9b8b9 0%, #caaaca 70%, #9042b1 100%);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .home {
@@ -120,8 +147,7 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  background: -webkit-gradient(linear, left top, left bottom, from(white), color-stop(80%, #b9b8b9), to(#8b878b));
-  background: linear-gradient(180deg, white 0%, #b9b8b9 80%, #8b878b 100%);
+  padding-bottom: 35px;
 }
 
 .home .name-mobile {
@@ -165,6 +191,7 @@
 
 .home .info .info-parag {
   margin-top: 25px;
+  height: 80px;
 }
 
 .home .info .info-parag .info-text {
@@ -310,15 +337,14 @@
 }
 
 .about {
-  background: #8b878b;
   height: 100%;
   padding-bottom: 25px;
   margin: auto;
 }
 
 .about .about-me {
-  width: calc(100% - 40px);
-  margin: 0 20px;
+  width: 80%;
+  margin: auto;
   text-align: center;
   border-radius: 10px;
 }
@@ -336,8 +362,35 @@
   font-size: 1.2rem;
 }
 
-.projects {
-  background: #812ca5;
+.skills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+  margin: auto;
+}
+
+.skills .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 80%;
+  margin: auto;
+  margin-bottom: 35px;
+}
+
+.skills .logo {
+  width: 80px;
+  margin: auto;
 }
 
 .single-project {
@@ -364,12 +417,21 @@
   font-size: 1.5rem;
 }
 
-.animation {
-  -webkit-animation: fade-enter 1s linear;
-          animation: fade-enter 1s linear;
+.br {
+  font-family: "Shadows Into Light", cursive;
+  font-style: italic;
+  font-weight: 500;
+  width: 25px;
+  margin: auto;
+  margin-bottom: 35px;
 }
 
-@keyframes fade-enter {
+.fade-up-animation {
+  -webkit-animation: fade-up 1s linear;
+          animation: fade-up 1s linear;
+}
+
+@keyframes fade-up {
   0% {
     -webkit-transform: translateY(100px);
             transform: translateY(100px);
@@ -385,7 +447,7 @@
   }
 }
 
-@-webkit-keyframes fade-enter {
+@-webkit-keyframes fade-up {
   0% {
     -webkit-transform: translateY(100px);
             transform: translateY(100px);
@@ -397,6 +459,43 @@
   100% {
     -webkit-transform: translateY(0);
             transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.fade-up-body {
+  -webkit-animation: fade-enter 0.75s linear;
+          animation: fade-enter 0.75s linear;
+}
+
+@keyframes fade-enter {
+  0% {
+    -webkit-transform: translateY(150px);
+            transform: translateY(150px);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.25;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fade-enter {
+  0% {
+    -webkit-transform: translateY(150px);
+            transform: translateY(150px);
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.25;
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
     opacity: 1;
   }
 }
