--- a/src/style/sass/index.scss
+++ b/src/style/sass/index.scss
@@ -7,6 +7,7 @@
 @import "./body/about";
 @import "./body/projects";
 @import "./body/skills";
+@import "./body/footer";
 @import "./components/singleProjects";
 @import "./components/br";
 @import "./animations";
