--- a/src/style/sass/_variables.scss
+++ b/src/style/sass/_variables.scss
@@ -1,5 +1,11 @@
+// Screen sizes
+
 $sm: 320px;
 $md: 481px;
 $lg: 769px;
 $xlg: 1025px;
 $xxlg: 1201px;
+
+// colors
+$light-text: rgb(212, 209, 212);
+$off-black: #000505;
