--- a/src/style/sass/body/_body.scss
+++ b/src/style/sass/body/_body.scss
@@ -1,42 +1,31 @@
 .body {
-  position: absolute;
-
-  // background: linear-gradient(
-  //   180deg,
-  //   rgb(185, 184, 185) 0%,
-  //   rgb(202, 170, 202) 70%,
-
-  //   rgb(144, 66, 177) 100%
-  // );
   .block {
     height: 80px;
     position: sticky;
     top: 0;
   }
-  .body-content {
-    height: 700px;
-    margin: 0;
-  }
+
   display: flex;
   flex-direction: column;
+  max-width: 600px;
+  margin: auto;
   .content-container {
     z-index: 1;
   }
-}
 
-.backdrop {
-  background: linear-gradient(
-    180deg,
-    rgb(185, 184, 185) 0%,
-    rgb(202, 170, 202) 70%,
+  .backdrop {
+    background: linear-gradient(
+      180deg,
+      rgb(185, 184, 185) 0%,
+      rgb(202, 170, 202) 70%,
 
-    rgb(144, 66, 177) 100%
-  );
-
-  height: 100vh;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
+      rgb(144, 66, 177) 100%
+    );
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
 }
