--- a/src/style/sass/body/_home.scss
+++ b/src/style/sass/body/_home.scss
@@ -3,18 +3,9 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-
-  // background: linear-gradient(
-  //   180deg,
-  //   rgb(255, 255, 255) 0%,
-  //   // rgb(144, 66, 177) 80%,
-  //   // rgb(129, 44, 165) 100%
-  //   rgb(212, 209, 212) 80%,
-  //   rgb(185, 184, 185) 100%
-  // );
-  
-  height: 100vh;
-
+  @media (min-width: $md) {
+    margin-top: 40px;
+  }
   .name-mobile {
     margin-top: 15px;
     display: block;
@@ -34,6 +25,9 @@
     .face-picture {
       border-radius: 50%;
       width: 250px;
+      @media (min-width: $md) {
+        width: 400px;
+      }
     }
   }
   .info {
@@ -41,138 +35,21 @@
     margin-top: 25px;
     line-height: 1.4;
     font-size: 1.2rem;
+    @media (min-width: $md) {
+      margin-top: 40px;
+      line-height: 1.6;
+      font-size: 2rem;
+    }
     .info-parag {
       margin-top: 25px;
-      height: 80px;
+      height: 150px;
+      @media (min-width: $md) {
+        margin-top: 40px;
+        height: 300px;
+      }
       .info-text {
         margin-bottom: 15px;
       }
-    }
-  }
-
-  // ANIMATIONS
-
-  // React Logo Spin
-  .react-spin {
-    animation: spin 5s infinite linear;
-  }
-  @keyframes spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-    }
-  }
-  @-moz-keyframes spin {
-    from {
-      -moz-transform: rotate(0deg);
-    }
-    to {
-      -moz-transform: rotate(359deg);
-    }
-  }
-  @-webkit-keyframes spin {
-    from {
-      -webkit-transform: rotate(0deg);
-    }
-    to {
-      -webkit-transform: rotate(359deg);
-    }
-  }
-
-  .stack-bounce {
-    animation: stackBounce 2s infinite ease;
-  }
-  @keyframes stackBounce {
-    0% {
-      transform: scale(1, 1) translateY(0);
-    }
-    10% {
-      transform: scale(1.1, 0.9) translateY(0);
-    }
-    30% {
-      transform: scale(0.9, 1.1) translateY(-15px);
-    }
-    50% {
-      transform: scale(1, 1) translateY(0);
-    }
-    100% {
-      transform: scale(1, 1) translateY(0);
-    }
-  }
-
-  // Electrician Logo face in and out
-  .lightning-fade {
-    animation: fadeOut 2.5s infinite ease;
-  }
-  @keyframes fadeOut {
-    0% {
-      opacity: 0.2;
-    }
-    2% {
-      opacity: 0.5;
-    }
-    6% {
-      opacity: 0.7;
-    }
-    8% {
-      opacity: 0.8;
-    }
-    10% {
-      opacity: 1;
-    }
-    15% {
-      opacity: 0.2;
-    }
-    20% {
-      opacity: 1;
-    }
-  }
-  @-moz-keyframes fadeOut {
-    0% {
-      -moz-opacity: 0.2;
-    }
-    2% {
-      -moz-opacity: 0.5;
-    }
-    6% {
-      -moz-opacity: 0.7;
-    }
-    8% {
-      -moz-opacity: 0.8;
-    }
-    10% {
-      -moz-opacity: 1;
-    }
-    15% {
-      -moz-opacity: 0.2;
-    }
-    20% {
-      -moz-opacity: 1;
-    }
-  }
-  @-webkit-keyframes fadeOut {
-    0% {
-      -webkit-opacity: 0.2;
-    }
-    2% {
-      -webkit-opacity: 0.5;
-    }
-    6% {
-      -webkit-opacity: 0.7;
-    }
-    8% {
-      -webkit-opacity: 0.8;
-    }
-    10% {
-      -webkit-opacity: 1;
-    }
-    15% {
-      -webkit-opacity: 0.2;
-    }
-    20% {
-      -webkit-opacity: 1;
     }
   }
 }
