--- a/src/style/sass/header/_header.scss
+++ b/src/style/sass/header/_header.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #fefcfd;
+  color: $light-text;
   position: fixed;
   height: 80px;
   top: 0;
@@ -37,13 +37,12 @@
       margin-right: 25px;
       padding-bottom: 5px;
       background-color: #000505;
-      color: #fefcfd;
-      color: rgb(212, 209, 212);
+      color: $light-text;
       border: none;
       cursor: pointer;
     }
     .active {
-      border-bottom: 1px solid rgb(212, 209, 212);
+      border-bottom: 1px solid $light-text;
     }
     .last {
       margin-right: 0;
