--- a/src/style/sass/index.css
+++ b/src/style/sass/index.css
@@ -5,7 +5,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
   font-family: "Nunito Sans", sans-serif;
 }
 
@@ -23,7 +22,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #fefcfd;
+  color: #d4d1d4;
   position: fixed;
   height: 80px;
   top: 0;
@@ -77,7 +76,6 @@
   margin-right: 25px;
   padding-bottom: 5px;
   background-color: #000505;
-  color: #fefcfd;
   color: #d4d1d4;
   border: none;
   cursor: pointer;
@@ -98,7 +96,6 @@
 }
 
 .body {
-  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,6 +103,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  max-width: 600px;
+  margin: auto;
 }
 
 .body .block {
@@ -115,16 +114,11 @@
   top: 0;
 }
 
-.body .body-content {
-  height: 700px;
-  margin: 0;
-}
-
 .body .content-container {
   z-index: 1;
 }
 
-.backdrop {
+.body .backdrop {
   background: -webkit-gradient(linear, left top, left bottom, from(#b9b8b9), color-stop(70%, #caaaca), to(#9042b1));
   background: linear-gradient(180deg, #b9b8b9 0%, #caaaca 70%, #9042b1 100%);
   height: 100vh;
@@ -147,7 +141,12 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  height: 100vh;
+}
+
+@media (min-width: 481px) {
+  .home {
+    margin-top: 40px;
+  }
 }
 
 .home .name-mobile {
@@ -182,6 +181,12 @@
   width: 250px;
 }
 
+@media (min-width: 481px) {
+  .home .face-picture-box .face-picture {
+    width: 400px;
+  }
+}
+
 .home .info {
   margin: auto;
   margin-top: 25px;
@@ -189,148 +194,34 @@
   font-size: 1.2rem;
 }
 
+@media (min-width: 481px) {
+  .home .info {
+    margin-top: 40px;
+    line-height: 1.6;
+    font-size: 2rem;
+  }
+}
+
 .home .info .info-parag {
   margin-top: 25px;
-  height: 80px;
+  height: 150px;
+}
+
+@media (min-width: 481px) {
+  .home .info .info-parag {
+    margin-top: 40px;
+    height: 300px;
+  }
 }
 
 .home .info .info-parag .info-text {
   margin-bottom: 15px;
 }
 
-.home .react-spin {
-  -webkit-animation: spin 5s infinite linear;
-          animation: spin 5s infinite linear;
-}
-
-@keyframes spin {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(359deg);
-            transform: rotate(359deg);
-  }
-}
-
-@-webkit-keyframes spin {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(359deg);
-  }
-}
-
-.home .stack-bounce {
-  -webkit-animation: stackBounce 2s infinite ease;
-          animation: stackBounce 2s infinite ease;
-}
-
-@-webkit-keyframes stackBounce {
-  0% {
-    -webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-  }
-  10% {
-    -webkit-transform: scale(1.1, 0.9) translateY(0);
-            transform: scale(1.1, 0.9) translateY(0);
-  }
-  30% {
-    -webkit-transform: scale(0.9, 1.1) translateY(-15px);
-            transform: scale(0.9, 1.1) translateY(-15px);
-  }
-  50% {
-    -webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-  }
-  100% {
-    -webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-  }
-}
-
-@keyframes stackBounce {
-  0% {
-    -webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-  }
-  10% {
-    -webkit-transform: scale(1.1, 0.9) translateY(0);
-            transform: scale(1.1, 0.9) translateY(0);
-  }
-  30% {
-    -webkit-transform: scale(0.9, 1.1) translateY(-15px);
-            transform: scale(0.9, 1.1) translateY(-15px);
-  }
-  50% {
-    -webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-  }
-  100% {
-    -webkit-transform: scale(1, 1) translateY(0);
-            transform: scale(1, 1) translateY(0);
-  }
-}
-
-.home .lightning-fade {
-  -webkit-animation: fadeOut 2.5s infinite ease;
-          animation: fadeOut 2.5s infinite ease;
-}
-
-@keyframes fadeOut {
-  0% {
-    opacity: 0.2;
-  }
-  2% {
-    opacity: 0.5;
-  }
-  6% {
-    opacity: 0.7;
-  }
-  8% {
-    opacity: 0.8;
-  }
-  10% {
-    opacity: 1;
-  }
-  15% {
-    opacity: 0.2;
-  }
-  20% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fadeOut {
-  0% {
-    -webkit-opacity: 0.2;
-  }
-  2% {
-    -webkit-opacity: 0.5;
-  }
-  6% {
-    -webkit-opacity: 0.7;
-  }
-  8% {
-    -webkit-opacity: 0.8;
-  }
-  10% {
-    -webkit-opacity: 1;
-  }
-  15% {
-    -webkit-opacity: 0.2;
-  }
-  20% {
-    -webkit-opacity: 1;
-  }
-}
-
 .about {
-  height: 100%;
   padding-bottom: 25px;
   margin: auto;
+  height: 100%;
 }
 
 .about .about-me {
@@ -342,7 +233,7 @@
 
 @media (min-width: 481px) {
   .about .about-me {
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
   }
 }
@@ -384,8 +275,60 @@
   margin: auto;
 }
 
+.contact {
+  text-align: center;
+  font-size: 1.4rem;
+  margin-bottom: 15px;
+}
+
+.contact .contact-icon-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact .contact-icon-container .contact-icon {
+  width: 100px;
+  margin: 10px;
+}
+
+.contact .contact-link {
+  color: #000505;
+  text-decoration: none;
+}
+
 .footer {
-  background: red;
+  background: #000505;
+  color: #d4d1d4;
+  bottom: 0;
+  font-size: 0.9rem;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 400;
+  width: 100%;
+  padding: 5px 0;
+}
+
+.footer .footer-link {
+  color: #d4d1d4;
 }
 
 .single-project {
@@ -412,6 +355,10 @@
   font-size: 1.5rem;
 }
 
+.project-img {
+  width: 300px;
+}
+
 .br {
   font-family: "Shadows Into Light", cursive;
   font-style: italic;
@@ -422,8 +369,8 @@
 }
 
 .fade-up-animation {
-  -webkit-animation: fade-up 1s linear;
-          animation: fade-up 1s linear;
+  -webkit-animation: fade-up 0.6s linear;
+          animation: fade-up 0.6s linear;
 }
 
 @keyframes fade-up {
@@ -432,7 +379,7 @@
             transform: translateY(100px);
     opacity: 0;
   }
-  50% {
+  75% {
     opacity: 0.25;
   }
   100% {
@@ -448,7 +395,7 @@
             transform: translateY(100px);
     opacity: 0;
   }
-  50% {
+  75% {
     opacity: 0.25;
   }
   100% {
@@ -458,39 +405,31 @@
   }
 }
 
-.fade-up-body {
-  -webkit-animation: fade-enter 0.75s linear;
-          animation: fade-enter 0.75s linear;
+.fade-enter-body {
+  -webkit-animation: fade-enter 0.5s linear;
+          animation: fade-enter 0.5s linear;
 }
 
 @keyframes fade-enter {
   0% {
-    -webkit-transform: translateY(150px);
-            transform: translateY(150px);
     opacity: 0;
   }
   50% {
     opacity: 0.25;
   }
   100% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
     opacity: 1;
   }
 }
 
 @-webkit-keyframes fade-enter {
   0% {
-    -webkit-transform: translateY(150px);
-            transform: translateY(150px);
     opacity: 0;
   }
   50% {
     opacity: 0.25;
   }
   100% {
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
     opacity: 1;
   }
 }
