--- a/src/style/sass/components/_singleProjects.scss
+++ b/src/style/sass/components/_singleProjects.scss
@@ -1,27 +1,83 @@
 .single-project {
   text-align: center;
+  background: $light-text;
 
-  border-bottom: 1px black solid;
-  .project-content {
-    margin-bottom: 15px;
+  width: 90%;
+  margin: auto;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 25px;
+  padding-top: 15px;
+  // for flip
+  perspective: 1000px;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+
+  &:hover {
+    transform: rotateY(180deg);
+  }
+  &:active {
+    transform: rotateY(180deg);
+  }
+
+  .project-content-front {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+
+    height: 100%;
+    width: 100%;
+    .project-img-box {
+      height: 350px;
+
+      .project-img-sm {
+        width: 300px;
+        height: 350px;
+        object-fit: cover;
+        object-position: center top;
+      }
+    }
+  }
+  .project-content-back {
+    transform: rotateY(180deg);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+
+    .project-img-box {
+      height: 350px;
+      margin-bottom: 15px;
+      .project-img-sm-back {
+        opacity: 0.2;
+        width: 300px;
+        height: 350px;
+        object-fit: cover;
+        object-position: center top;
+      }
+    }
+    .project-text {
+      position: absolute;
+      text-align: center;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      margin: 15px;
+    }
   }
 }
 
-.project-img {
-  padding: 15px;
-}
-
-.temp-img {
-  width: 100%;
-  height: 300px;
-  background-color: rgb(180, 209, 180);
+.project-head {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .project-title {
   line-height: 1.3rem;
   font-size: 1.5rem;
-}
-
-.project-img {
-  width: 300px;
 }
