--- a/src/style/sass/body/_about.scss
+++ b/src/style/sass/body/_about.scss
@@ -1,13 +1,14 @@
 .about {
   padding-bottom: 25px;
   margin: auto;
-  height: 100%;
+  min-height: 80vh;
+  margin-bottom: 10vh;
   .about-me {
     width: 80%;
     margin: auto;
-
     text-align: center;
-    border-radius: 10px;
+    margin-bottom: 10vh;
+
     @media (min-width: $md) {
       width: 80%;
       margin: 0 auto;
