Fixed some spacing. Add portfolio to projects

--- a/src/style/sass/_animations.scss
+++ b/src/style/sass/_animations.scss
@@ -1,3 +1,5 @@
+// FADE UP USED FOR ABOUT SECTION
+
 .fade-up-animation {
   animation: fade-up 0.6s linear;
 }
@@ -42,6 +44,8 @@
     opacity: 1;
   }
 }
+
+// FADE USED FOR MAIN BODY
 
 .fade-enter-body {
   animation: fade-enter 0.5s linear;
