--- a/src/style/sass/body/_about.scss
+++ b/src/style/sass/body/_about.scss
@@ -1,8 +1,10 @@
 .about {
-  padding-bottom: 25px;
   margin: auto;
   min-height: 80vh;
-  margin-bottom: 5vh;
+
+  @media (min-width: $md) {
+    width: 80%;
+  }
   .about-me {
     width: 80%;
     margin: auto;
@@ -19,10 +21,13 @@
       line-height: 1.4rem;
       font-size: 1.2rem;
       @media (min-width: $md) {
-        line-height: 1.6rem;
+        line-height: 2.2rem;
         font-size: 1.6rem;
         margin-bottom: 25px;
       }
+    }
+    .about-last {
+      margin-bottom: 0;
     }
   }
 }
