--- a/src/style/sass/components/_singleProjects.scss
+++ b/src/style/sass/components/_singleProjects.scss
@@ -1,6 +1,5 @@
 .single-project {
   text-align: center;
-  background: $light-text;
 
   width: 90%;
   margin: auto;
@@ -9,31 +8,34 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
   padding-top: 15px;
+
   @media (min-width: $md) {
-    margin-bottom: 100px;
+    margin-bottom: 50px;
   }
   // for flip
-  perspective: 1000px;
-  transition: transform 0.5s;
-  transform-style: preserve-3d;
-
-  &:hover {
-    transform: rotateY(180deg);
-  }
-  &:active {
-    transform: rotateY(180deg);
-  }
-
-  .project-head {
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    .project-title {
-      line-height: 1.3rem;
-      font-size: 1.5rem;
+  .project-flip-box {
+    height: 400px;
+    perspective: 1000px;
+    transition: transform 0.5s;
+    transform-style: preserve-3d;
+    border: 1px solid black;
+    margin-bottom: 25px;
+    &:hover {
+      transform: rotateY(180deg);
+    }
+    &:active {
+      transform: rotateY(180deg);
+    }
+    .project-img-box {
+      height: 400px;
+      .project-img-sm {
+        width: 300px;
+        height: 400px;
+        object-fit: cover;
+        object-position: center top;
+      }
     }
   }
 
@@ -41,37 +43,22 @@
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
-
     height: 100%;
     width: 100%;
-    .project-img-box {
-      height: 350px;
-
-      .project-img-sm {
-        width: 300px;
-        height: 350px;
-        object-fit: cover;
-        object-position: center top;
-      }
-    }
+    opacity: 1;
   }
   .project-content-back {
+    background: rgb(185, 184, 185);
     transform: rotateY(180deg);
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
+    width: 100%;
     position: absolute;
-
-    .project-img-box {
-      height: 350px;
-      margin-bottom: 15px;
-      .project-img-sm-back {
-        opacity: 0.2;
-        width: 300px;
-        height: 350px;
-        object-fit: cover;
-        object-position: center top;
-      }
+    top: 0;
+    left: 0;
+    .img-back {
+      opacity: 0.2;
     }
     .project-article {
       position: absolute;
@@ -100,5 +87,9 @@
         }
       }
     }
+  }
+  .project-title-box {
+    line-height: 1.4;
+    font-size: 1.4rem;
   }
 }
