Added typewriter functionality, added comments

--- a/src/style/sass/body/_body.scss
+++ b/src/style/sass/body/_body.scss
@@ -24,6 +24,7 @@
       rgb(144, 66, 177) 100%
     );
     // background: rgb(196, 127, 226);
+    // background: rgb(211, 175, 226);
     height: 100vh;
     width: 100%;
     position: fixed;
