--- a/src/style/sass/body/_home.scss
+++ b/src/style/sass/body/_home.scss
@@ -4,7 +4,8 @@
   align-items: center;
   text-align: center;
   justify-content: center;
-  height: calc(100vh - 80px);
+  min-height: calc(100vh - 80px);
+
 
   @media (min-width: $md) {
     padding-top: 20px;
