--- a/src/style/sass/index.css
+++ b/src/style/sass/index.css
@@ -146,7 +146,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: calc(100vh - 80px);
+  min-height: calc(100vh - 80px);
 }
 
 @media (min-width: 481px) {
@@ -427,7 +427,7 @@
 
 .single-project {
   text-align: center;
-  width: 90%;
+  width: 60%;
   margin: auto;
   border-radius: 3px;
   display: -webkit-box;
@@ -555,15 +555,6 @@
 .single-project .project-title-box {
   line-height: 1.4;
   font-size: 1.4rem;
-}
-
-.br {
-  font-family: "Shadows Into Light", cursive;
-  font-style: italic;
-  font-weight: 500;
-  width: 55px;
-  margin: auto;
-  margin-bottom: 35px;
 }
 
 .fade-up-animation {
